fixed Q2's sort